[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/Dialog Box/9patch_dialog.png" type="Texture" id=1]
[ext_resource path="res://fonts/Courier New, Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GiddyUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Submit_Player.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.142857
step = 0.0285714
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_min_size")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0285714, 0.0571429, 0.0857143, 0.114286, 0.142857 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 60, 60 ), Vector2( 202, 89 ), Vector2( 355, 128 ), Vector2( 508, 168 ), Vector2( 661, 206 ), Vector2( 640, 191 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/RichTextLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.114286, 0.142857 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Submit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.114286, 0.142857 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../Skip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.114286, 0.142857 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../NameLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.114286, 0.142857 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../PlayerName:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.114286, 0.142857 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_min_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 60, 60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/RichTextLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Submit:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../Skip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../NameLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../PlayerName:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="Theme" id=7]
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 1, 1, 1, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 9 )
LineEdit/styles/normal = SubResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[node name="SubmitBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -257.0
margin_right = 320.0
margin_bottom = -18.0
grow_horizontal = 2

[node name="Body_NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_top = 24.0
margin_right = 640.0
margin_bottom = 215.0
rect_min_size = Vector2( 640, 191 )
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Body_NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 24.0
margin_right = -42.0
margin_bottom = -24.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/Body_NinePatchRect/MarginContainer"]
margin_right = 556.0
margin_bottom = 143.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
text = "Your current high score is: 0. Would you like to submit?"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CenterContainer/Body_NinePatchRect"]
autoplay = "Open"
reset_on_save = false
playback_process_mode = 0
anims/Open = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Submit" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 117.0
margin_top = 332.0
margin_right = 268.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 4 )
text = "Submit"

[node name="Skip" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 332.0
margin_right = 506.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 4 )
text = "Skip"

[node name="NameLabel" type="RichTextLabel" parent="."]
margin_left = 378.0
margin_top = 304.0
margin_right = 448.0
margin_bottom = 328.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
text = "Name:"
scroll_active = false

[node name="PlayerName" type="LineEdit" parent="."]
margin_left = 440.0
margin_top = 300.0
margin_right = 606.0
margin_bottom = 325.0
theme = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Player"
max_length = 50
context_menu_enabled = false
placeholder_text = "Player"
placeholder_alpha = 0.4
caret_blink = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
